--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,8 +4,8 @@
 }
 .fun-img{
     
-    max-height: 100%;
-    max-width: 100%;
+  width: fit-content;
+  max-width: fit-content;
 
 }
 ::ng-deep .mat-form-field-wrapper{
