--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <!-- <router-outlet></router-outlet>  -->
 
-<app-take-note></app-take-note>
-<!-- <app-icon></app-icon> -->
+ <app-take-note></app-take-note> 
+<!-- <app-icon></app-icon>  -->
+<!-- <textarea matInput
+cdkTextareaAutosize
+#autosize="cdkTextareaAutosize"
+></textarea> -->
