--- a/src/app/components/take-note/take-note.component.scss
+++ b/src/app/components/take-note/take-note.component.scss
@@ -1,7 +1,9 @@
-.create-note{
-    margin-right: 15px;
-    margin-top:45px;
+.main{
+    margin-left: 17px;
+
+    margin-top:25px;
     width:100%;
+    height:75%;
 }
 
 .title{
@@ -17,4 +19,6 @@
 .description{
     border:none transparent;
     outline: none;
+    width: 100%;
+
 }
