--- a/src/app/components/take-note/take-note.component.html
+++ b/src/app/components/take-note/take-note.component.html
@@ -1,14 +1,16 @@
 <div class="main" fxFlex=100 >
-  <mat-card class="create-note" fxFlexOffset="25" fxFlex=60  >
+  <mat-card fxFlexOffset="25" fxFlex=60  >
       <div *ngIf="!isOpen" (click)='isOpen=true'  >
-        <p>Take a Note..</p>
+        <h5>Take a Note..</h5>
       </div>
       <div *ngIf='isOpen'  >
             <div class="title" >
               <input matInput type="text" placeholder="Title" style=" border:none transparent; outline:none; font-size: 18px; font-family: sans-serif;" >
             </div>
             <div class="description" >
-                <textarea  type="text" placeholder="Take a Note.." style="padding:0; border:none transparent; outline:none; font-size: 18px;" ></textarea>
+                <!-- <textarea  type="text" placeholder="Take a Note.." style="padding:0; border:none transparent; outline:none; font-size: 18px;" ></textarea> -->
+                <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize"  placeholder="Take a Note.." style="width:100%; border:none transparent;
+                outline: none;" ></textarea>
             </div>
             
           
@@ -18,7 +20,7 @@
                   <app-icon></app-icon>
 
               </div>  
-                <button type="text" fxFlexOffset="45" (click)="isOpen=false" fxLayoutAlign="end center" style="padding: 0;border: none; background: none; font-size: 18px"  >Close</button>
+                <button type="text" fxFlexOffset="15" (click)="isOpen=false" fxLayoutAlign="end center" style="padding: 0;border: none; background: none; font-size: 18px"  >Close</button>
 
             </div>
           </div>
