--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutAlign="space-around center"  fxLayoutGap="18px" fxFlex=100 >
-  <div fxFlex=18  >
+<div fxLayout="row" fxLayoutAlign="space-around center"  fxLayoutGap="20px" fxLayoutGap.sm="4px" fxLayoutGap.md="4px" fxLayoutGap.xs="1px" fxFlex=100 >
+  <div fxFlex=17  >
     <button mat-icon-button (click)="snav.toggle()" >
       <mat-icon>notification_important</mat-icon>
     </button>
@@ -27,7 +27,7 @@
         </button>
 
   </div>
-  <div fxFlex=18 >
+  <div fxFlex=19 >
       <button mat-icon-button (click)="snav.toggle()" >
           <mat-icon>more_vert</mat-icon>
         </button>
