--- a/src/app/components/take-note/take-note.component.scss
+++ b/src/app/components/take-note/take-note.component.scss
@@ -5,14 +5,14 @@
     
 }
 .note-card{
-    max-height:75%;
-    max-width:60%;
+    max-height:70%;
+   
 
 }
 .heading{
     display: inline-block;
     margin: 0;
-
+    width: 100%;
     font-size: 18px; 
     font-family: sans-serif;
 }
