--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="row" fxLayoutAlign="space-around center"  fxLayoutGap="20px" fxLayoutGap.sm="4px" fxLayoutGap.md="4px" fxLayoutGap.xs="1px" fxFlex=100 >
+<div fxLayout="row" fxLayoutAlign="space-around center"  fxLayoutGap="10px" fxLayoutGap.sm="4px" fxLayoutGap.md="4px" fxLayoutGap.xs="1px" fxFlex=100 >
   <div fxFlex=17  >
     <button mat-icon-button (click)="snav.toggle()" >
-      <mat-icon>notification_important</mat-icon>
+      <mat-icon class="material-icons" >notification_important</mat-icon>
     </button>
   </div>
   <div fxFlex=16 >
