--- a/src/app/components/update-note/update-note.component.scss
+++ b/src/app/components/update-note/update-note.component.scss
@@ -1,14 +1,9 @@
-.main{
-    margin-left: 45px;
-    margin-top:25px;
 
+.container{
+    width: 100%; 
     
 }
-.note-card{
-    max-height:70%;
-   
 
-}
 .heading{
     display: inline-block;
     margin: 0;
