--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -2,6 +2,9 @@
     width : 50%;
 
 }
+.sidenavbar{
+  padding: 0px 40px;
+}
 .fun-img{
     
   width: fit-content;
@@ -12,9 +15,10 @@
     padding-bottom: 0px;
 }
 .round{
-    margin-left: 15px;
+    margin-left: -30px;
 }
 .divider{
+    padding: 0px 40px 0px 0px;
     top:10px;
     width:100%;
     height:1px;
