doing trash-note

--- a/src/app/components/diaplay-note/diaplay-note.component.scss
+++ b/src/app/components/diaplay-note/diaplay-note.component.scss
@@ -8,3 +8,14 @@
     min-width: 280px;
     
 }
+.title{
+    border:none transparent;
+    outline: none;
+    font-size: 16px;
+    size:70; 
+    width:48; 
+    height:48;
+    width:100%;
+    max-width: 100%;
+    margin-bottom: 15px;
+}
