--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -27,9 +27,19 @@
 
   </div>
   <div fxFlex=19 >
-      <button mat-icon-button (click)="snav.toggle()" >
-          <mat-icon>more_vert</mat-icon>
+      <button mat-icon-button [matMenuTriggerFor]="menu" (click)="snav.toggle()" >
+        <mat-icon>more_vert</mat-icon>
       </button>
+      <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)='deleteNote()' >Delete Note</button>
+          <button mat-menu-item>Add Label</button>
+        </mat-menu>
+
 
   </div>
 </div>
+<!-- <mat-menu #appMenu="matMenu" yPosition="above">
+  <mat-icon class="icon">close</mat-icon>
+  <button mat-menu-item>Settings</button>
+  <button mat-menu-item>Help</button>
+</mat-menu> -->
