complete trash archive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <router-outlet></router-outlet> 
 
-
+<!-- <app-trash-note></app-trash-note> -->
 <!-- <app-update-note></app-update-note> -->
+<!-- <app-archive-note></app-archive-note> -->
+<!-- <app-diaplay-note></app-diaplay-note> -->
