--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,2 +1,2 @@
 <app-take-note></app-take-note>
-<app-diaplay-note [allCards]="get_notes" > </app-diaplay-note>
+<app-diaplay-note [allCards]="displayNote"> </app-diaplay-note>
