--- a/src/app/components/take-note/take-note.component.html
+++ b/src/app/components/take-note/take-note.component.html
@@ -12,7 +12,7 @@
                     <input matInput type="text" [formControl]="title"  placeholder="Title"  style=" border:none transparent; outline:none; font-size: 16px; font-family: sans-serif;" required >
                   </div>
                   <div>
-                    <button mat-icon-button (click)="isPinned=true" >
+                    <button mat-icon-button (click)="isPinned()" >
                       <mat-icon><img src="../../../assets/images/images.png" height="25px" width="25px" ></mat-icon>
                     </button>
                   </div>
