--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -39,7 +39,7 @@
 }
 .sidenav-list{
     border-width: 50px;
-
+    width: 100px;
     background-color: rgba(238, 233, 142, 0.408);
     border-bottom-right-radius: 32px;
     border-top-right-radius: 32px;
