--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -17,6 +17,12 @@
 .round{
     margin-left: -30px;
 }
+.profile{
+  width:100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
 .divider{
     padding: 0px 40px 0px 0px;
     top:10px;
@@ -24,6 +30,7 @@
     height:1px;
     margin-left:auto;
     margin-right: auto;
+    margin-bottom: 10px;
     background-color: rgba(0,0,0,.28)
     
 
