--- a/src/app/components/take-note/take-note.component.html
+++ b/src/app/components/take-note/take-note.component.html
@@ -1,6 +1,6 @@
-<div class="main" fxFlex=80 fxFlex.xs=80 fxLayout="row" fxLayoutAlign="center center">
-  <mat-card fxLayout="column" fxLayoutAlign="center center" class="note-card" fxFlex=50 fxFlex.md=80 fxFlex.sm=75
-    fxFlex.xs=80>
+<div class="main" fxFlex=100 fxFlex.xs=80 fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.xs="center center" >
+  <mat-card fxLayout="column" fxLayoutAlign="center center" fxLayoutAlign.xs="center center" class="note-card" fxFlex=50 fxFlex.md=80 fxFlex.sm=75
+    fxFlex.xs=70>
     <div *ngIf="!isOpen" (click)='isOpen=true' class="heading" fxLayout="row" fxLayoutAlign="start center">
       <h5>Take a Note..</h5>
     </div>
