--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -38,24 +38,31 @@
             </div>
 
             <div fxFlex=14 fxFlex.md=18 fxFlex.sm=35 fxFlex.xs=35 fxLayoutAlign="end center" >
-              <button mat-mini-fab color="" [matMenuTriggerFor]="menu" >Profile</button>
-              <div class="profile" >
+              <button mat-mini-fab color="" [matMenuTriggerFor]="menu"  >Profile</button>
+              <div class="profile-pic" fxFlex=100 style="width:100%;" >
 
-                <mat-menu #menu="matMenu">
-                      <div  fxLayout="row" fxLayoutGap="15px"   >
-                            <div style="border-radius: 50%;" >
-                                <img mat-card-avatar src="../../../assets/images/boss.jpeg" (click)="cropImage()" >
+                <mat-menu #menu="matMenu" >
+                      <div  fxLayout="row"  fxLayoutGap="15px" style="width:100%;"  >
+                            <div class="profile-image" style="border-radius: 100%;" >
+                                <img mat-card-avatar style="height: 60px;width: 60px;" src="../../../assets/images/boss.jpeg" (click)="changeProfile()" >
                                 
                             </div>
-                            <div>
-                                <mat-card-title style="font-size:16px;" >user-email-address
+                            <div  >
+                                <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;" >username
                                   </mat-card-title>
+                                  <mat-card-title style="font-size:14px;font-family: Roboto,Arial,sans-serif;" >user-email-address
+                                    </mat-card-title>
                             </div>
+                            
                       </div>
                       <div class="divider"></div>
-                      <div fxLayoutAlign="end center"  >
+                      <div class="footer" fxLayout="row" fxLayoutAlign="space-between center" fxFlex=100 style="width:100%;"    >
+                          <div>
+                              <button mat-raised-button (click)="addAccount" id="add-btn" color="">Add account</button>
+
+                          </div>
                             <div>
-                                <button mat-raised-button (click)="logout()" id="logout-btn" color="primary">signout</button>
+                                <button mat-raised-button (click)="logout()" id="logout-btn" color="">Sign out</button>
 
                             </div>
                             
