--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -17,11 +17,28 @@
 .round{
     margin-left: -30px;
 }
-.profile{
+.profile-pic{
   width:100%;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
+}
+.footer{
+  width:100%;
+  height: 100%;
+}
+.profile-image{
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  
+}
+.footer{
+  width:100%;
+  height: 100%;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 .divider{
     padding: 0px 40px 0px 0px;
