--- a/src/app/components/diaplay-note/diaplay-note.component.html
+++ b/src/app/components/diaplay-note/diaplay-note.component.html
@@ -35,7 +35,7 @@
 
                 <div fxLayout="row">
                     <div class="title" fxLayoutGap="10px">
-                        <mat-card-title style="font-size:16px;" (click)="modifyNote(note)">{{note.title}}
+                        <mat-card-title style="font-size:16px;font-family:Roboto,Arial,sans-serif;" (click)="modifyNote(note)">{{note.title}}
                         </mat-card-title>
                     </div>
                     <div class="pinned" >
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="description" fxLayoutGap="10px">
-                    <mat-card-title style="font-size:16px;">{{note.description}}</mat-card-title>
+                    <mat-card-title style="font-size:16px;font-family:Roboto,Arial,sans-serif;">{{note.description}}</mat-card-title>
                 </div>
                 <div class="icon">
                     <app-icon [childMessage]='note'></app-icon>
